@@ -1,10 +1,9 @@
 package com.next.app.api.order.controller;
 
-import com.next.app.api.order.controller.dto.OrderItemResponse;
 import com.next.app.api.order.controller.dto.OrderRequest;
 import com.next.app.api.order.controller.dto.OrderResponse;
+import com.next.app.api.order.controller.dto.OrderItemResponse;
 import com.next.app.api.order.entity.Order;
-import com.next.app.api.order.entity.OrderItem;
 import com.next.app.api.order.entity.OrderStatus;
 import com.next.app.api.order.service.OrderService;
 import com.next.app.security.CustomUserPrincipal;
@@ -20,46 +19,48 @@ import java.math.BigDecimal;
 import java.util.List;
 import java.util.stream.Collectors;
 
-@Tag(name = "Orders")
 @RestController
 @RequestMapping("/api/orders")
 @RequiredArgsConstructor
+@Tag(name = "Orders")
 public class OrderController {
 
     private final OrderService orderService;
 
     @GetMapping("/{id}")
     @Operation(summary = "주문 단건 조회")
-    public ResponseEntity<OrderResponse> getOrderById(@PathVariable Long id,
-                                                      @AuthenticationPrincipal CustomUserPrincipal principal) {
+    public ResponseEntity<OrderResponse> getOrder(@PathVariable Long id,
+                                                  @AuthenticationPrincipal CustomUserPrincipal principal) {
         if (!orderService.isOrderOwner(id, principal.getId())) {
             return ResponseEntity.status(HttpStatus.FORBIDDEN).build();
         }
-        return orderService.getOrder(id)
-                .map(o -> ResponseEntity.ok(toResponse(o)))
-                .orElse(ResponseEntity.notFound().build());
+        Order order = orderService.getOrderOrThrow(id);
+        return ResponseEntity.ok(toResponse(order));
     }
 
     @GetMapping
-    @Operation(summary = "내 주문 이력 조회")
+    @Operation(summary = "내 주문 목록")
     public ResponseEntity<List<OrderResponse>> listByUser(@AuthenticationPrincipal CustomUserPrincipal principal) {
         List<Order> orders = orderService.listByUser(principal.getId());
-        return ResponseEntity.ok(orders.stream().map(this::toResponse).toList());
+        List<OrderResponse> response = orders.stream().map(this::toResponse).collect(Collectors.toList());
+        return ResponseEntity.ok(response);
     }
 
     @PostMapping
     @Operation(summary = "주문 생성")
-    public ResponseEntity<OrderResponse> create(@AuthenticationPrincipal CustomUserPrincipal principal,
-                                                @RequestBody OrderRequest request) {
-        Order created = orderService.createOrder(request, principal.getId());
-        return ResponseEntity.ok(toResponse(created));
+    public ResponseEntity<OrderResponse> createOrder(@AuthenticationPrincipal CustomUserPrincipal principal,
+                                                     @RequestBody OrderRequest request) {
+        String defaultDeliveryAddress = "사용자 기본 배송 주소"; // 실제 users-service API 호출하여 받아야 함
+        Order order = orderService.createOrder(request, principal.getId(), defaultDeliveryAddress);
+        return ResponseEntity.ok(toResponse(order));
     }
 
     @PostMapping("/checkout")
-    @Operation(summary = "장바구니 주문 생성 후 비우기")
+    @Operation(summary = "장바구니 주문 생성")
     public ResponseEntity<OrderResponse> checkout(@AuthenticationPrincipal CustomUserPrincipal principal) {
-        Order created = orderService.createOrderFromCart(principal.getId());
-        return ResponseEntity.ok(toResponse(created));
+        String defaultDeliveryAddress = "사용자 기본 배송 주소"; // 실제 users-service API 호출하여 받아야 함
+        Order order = orderService.createOrderFromCart(principal.getId(), defaultDeliveryAddress);
+        return ResponseEntity.ok(toResponse(order));
     }
 
     @PatchMapping("/{id}/status")
@@ -71,34 +72,29 @@ public class OrderController {
 
     @DeleteMapping("/{id}")
     @Operation(summary = "주문 삭제")
-    public ResponseEntity<Void> delete(@PathVariable Long id) {
+    public ResponseEntity<Void> deleteOrder(@PathVariable Long id) {
         orderService.deleteOrder(id);
         return ResponseEntity.noContent().build();
     }
 
-    private OrderResponse toResponse(Order o) {
-        List<OrderItemResponse> items = o.getOrderItems() == null ? List.of() :
-                o.getOrderItems().stream().map(this::toItemResponse).collect(Collectors.toList());
+    private OrderResponse toResponse(Order order) {
         return OrderResponse.builder()
-                .orderId(o.getId())
-                .userId(o.getUser() != null ? o.getUser().getId() : null)
-                .deliveryAddress(o.getDeliveryAddress())
-                .status(o.getStatus() != null ? o.getStatus().name() : null)
-                .totalPrice(o.getTotalPrice())
-                .createdAt(o.getCreatedAt())
-                .items(items)
-                .build();
-    }
-
-    private OrderItemResponse toItemResponse(OrderItem oi) {
-        BigDecimal lineTotal = (oi.getPrice() != null ? oi.getPrice() : BigDecimal.ZERO)
-                .multiply(BigDecimal.valueOf(oi.getQuantity()));
-        return OrderItemResponse.builder()
-                .productId(oi.getProduct() != null ? oi.getProduct().getId() : null)
-                .productName(oi.getProduct() != null ? oi.getProduct().getName() : null)
-                .quantity(oi.getQuantity())
-                .price(oi.getPrice())
-                .lineTotal(lineTotal)
+                .orderId(order.getId())
+                .userId(order.getUserId())
+                .deliveryAddress(order.getDeliveryAddress())
+                .status(order.getStatus().name())
+                .totalPrice(order.getTotalPrice())
+                .createdAt(order.getCreatedAt())
+                .items(order.getOrderItems() == null ? List.of() :
+                        order.getOrderItems().stream()
+                                .map(oi -> new OrderItemResponse(
+                                        oi.getProduct() != null ? oi.getProduct().getId() : null,
+                                        oi.getProduct() != null ? oi.getProduct().getName() : null,
+                                        oi.getQuantity(),
+                                        oi.getPrice(),
+                                        oi.getPrice().multiply(BigDecimal.valueOf(oi.getQuantity()))
+                                ))
+                                .collect(Collectors.toList()))
                 .build();
     }
 }
